# bishojo

./: .gitignore  .id_rsa.pub  .travis.yml  Cargo.toml  id_rsa.enc
.github/workflows/: kkgal.yaml  run.yaml
src/: cli.rs  log.rs  main.rs  saved.rs
src/websites/: kkgal.rs  liuli.rs  mod.rs
